Attempt to fix categories visibility in the sidebar.

--- a/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
+++ b/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
@@ -9,7 +9,7 @@
 }
 
 body:not(.term-ypatingi-pasiulymai) {
-    .wc-block-product-categories-list:first-child {
+    .wc-block-product-categories > .wc-block-product-categories-list {
         li:first-child {
             display: none;
         }
@@ -17,7 +17,7 @@ body:not(.term-ypatingi-pasiulymai) {
 }
 
 .term-ypatingi-pasiulymai {
-    .wc-block-product-categories-list:first-child {
+    .wc-block-product-categories > .wc-block-product-categories-list {
         li:not(:first-child) {
             display: none;
         }
